--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,8 +2,5 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
-
-body {
-  font-family: 'Montserrat', sans-serif !important;
+  font-family: 'Montserrat', sans-serif;
 }
